adding watch back end

--- a/rechordly_app/wear/src/main/res/layout/fragment_echo.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_echo.xml
@@ -15,6 +15,7 @@
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"
         android:textSize="30sp"
-        android:text="Echo"/>
+        android:text="Echo"
+        android:onClick="onButtonPressed"/>
 
 </RelativeLayout>
