--- a/rechordly_app/wear/src/main/res/drawable/gradient.xml
+++ b/rechordly_app/wear/src/main/res/drawable/gradient.xml
@@ -1,10 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <!--  Gradient Bg for listrow -->
-    <gradient
-        android:startColor="#3740ff"
-        android:centerColor="#3f75ff"
-        android:endColor="#4096ff"
-        android:angle="90" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="false" android:state_pressed="false" android:drawable="@drawable/blue"/>
+    <item android:state_focused="true" android:state_pressed="false" android:drawable="@drawable/blue" />
+    <item android:state_focused="true" android:state_pressed="true" android:drawable="@drawable/dark" />
+    <item android:state_focused="false" android:state_pressed="true" android:drawable="@drawable/dark" />
+</selector>
