default wave image shows up on watch now

--- a/rechordly_app/wear/src/main/res/layout/activity_crop_back.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_crop_back.xml
@@ -26,7 +26,7 @@
             circular:thumb_color="#1939cc"
             circular:thumb_size="20dp"
             circular:black_outline="25dp"
-            circular:soundwave="@drawable/default_wave"
+            circular:soundwave="@drawable/defaultwave"
             circular:time="300"/>
     </RelativeLayout>
 
