--- a/rechordly_app/wear/src/main/res/layout/activity_crop_front.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_crop_front.xml
@@ -26,9 +26,10 @@
             circular:thumb_color="#1939cc"
             circular:thumb_size="20dp"
             circular:black_outline="25dp"
-            circular:soundwave="@drawable/default_wave"
+            circular:soundwave="@drawable/defaultwave"
             circular:time="300"/>
     </RelativeLayout>
+
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -51,12 +52,12 @@
         </TextView>
 
         <Button
-            android:layout_width="90dp"
-            android:layout_height="35dp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
             android:textSize="20sp"
             android:layout_gravity="center"
             android:paddingTop="0dp"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="95dp"
             android:background="@drawable/gradient"
             android:textAllCaps="false"
             android:text="Done"
