Made Naming buttons round. Made save screen and name screen look better

--- a/rechordly_app/wear/src/main/res/layout/fragment_lyric.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_lyric.xml
@@ -14,6 +14,8 @@
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"
         android:textSize="25sp"
-        android:text="Add\nLyrics"/>
+        android:text="Add\nLyrics"
+        android:lineSpacingExtra="-8dp"
+        />
 
 </RelativeLayout>
