--- a/rechordly_app/wear/src/main/res/layout/activity_done.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_done.xml
@@ -43,14 +43,15 @@
         <!--android:layout_marginTop="5dp"-->
         <!--/>-->
 
-    <!--<ImageView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/left_arrow"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_toLeftOf="@id/done_btn"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--/>-->
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/left_arrow"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/done_btn"
+        android:layout_marginTop="5dp"
+        />
+
 
 
 </RelativeLayout>
