--- a/rechordly_app/wear/src/main/res/layout/round_activity_save.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_save.xml
@@ -13,7 +13,7 @@
         android:id="@+id/icon"
         android:src="@drawable/icon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="38dp"
         />
 
     <!--<RelativeLayout-->
@@ -55,13 +55,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Saved!"
+            android:text="Recording Saved!"
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:id="@+id/saving_txt2"
             android:layout_marginStart="56dp"
-            android:layout_marginTop="-8dp"
             android:textSize="26sp"
+            android:lineSpacingExtra="-8dp"
             />
 
         </RelativeLayout>
