--- a/rechordly_app/wear/src/main/res/layout/round_activity_save.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_save.xml
@@ -62,6 +62,7 @@
             android:layout_marginStart="56dp"
             android:textSize="26sp"
             android:lineSpacingExtra="-8dp"
+            android:textColor="#af96db"
             />
 
         </RelativeLayout>
