--- a/rechordly_app/wear/src/main/res/layout/activity_crop.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_crop.xml
@@ -13,7 +13,7 @@
         android:layout_height="85dp"
         android:id="@+id/crop_btn"
         android:background="@drawable/gradient"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"
         android:textSize="30sp"
