--- a/rechordly_app/wear/src/main/res/layout/fragment_done.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_done.xml
@@ -4,40 +4,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="me.chrisvle.rechordly.VolumeActivity"
+    tools:context="me.chrisvle.rechordly.doneActivity"
     tools:deviceIds="wear_round">
+
 
     <!--<ImageButton-->
         <!--android:layout_width="150dp"-->
         <!--android:layout_height="85dp"-->
         <!--android:adjustViewBounds="true"-->
         <!--android:scaleType="fitStart"-->
-        <!--android:id="@+id/volume_btn"-->
+        <!--android:id="@+id/done_btn"-->
         <!--android:background="@android:color/transparent"-->
-        <!--android:src="@drawable/volume_btn"-->
+        <!--android:src="@drawable/big_done_btn"-->
         <!--android:layout_centerVertical="true"-->
         <!--android:layout_centerHorizontal="true"-->
         <!--android:contentDescription="@string/done_placeholder"-->
         <!--android:onClick = "onClick"-->
-       <!--/>-->
+        <!--/>-->
+
     <Button
         android:layout_width="150dp"
         android:layout_height="85dp"
-        android:id="@+id/gain_btn"
+        android:id="@+id/done_btn"
         android:background="@drawable/gradient"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"
         android:textSize="30sp"
-        android:text="Gain"/>
+        android:text="Done"/>
 
     <!--<ImageView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/dots3"-->
-        <!--android:src="@drawable/dot3"-->
+        <!--android:id="@+id/dots1"-->
+        <!--android:src="@drawable/dot1"-->
         <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_below="@id/volume_btn"-->
+        <!--android:layout_below="@id/done_btn"-->
         <!--android:layout_marginTop="5dp"-->
         <!--/>-->
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/left_arrow"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/done_btn"
+        android:layout_marginTop="5dp"
+        />
+
+
+
 </RelativeLayout>
