--- a/rechordly_app/wear/src/main/res/layout/fragment_echo.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_echo.xml
@@ -11,7 +11,7 @@
         android:layout_height="85dp"
         android:id="@+id/echo_btn"
         android:background="@drawable/gradient"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"
         android:textSize="30sp"
