--- a/rechordly_app/wear/src/main/res/layout/fragment_retry.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_retry.xml
@@ -46,7 +46,7 @@ tools:deviceIds="wear_round">
     />
 
 <TextView
-    android:layout_width="wrap_content"
+    android:layout_width="55dp"
     android:layout_height="wrap_content"
     android:id="@+id/retry_time"
     android:layout_above="@id/retry_record"
