--- a/rechordly_app/wear/src/main/res/layout/round_activity_main2.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_main2.xml
@@ -69,7 +69,7 @@
             />
 
         <Chronometer
-            android:layout_width="wrap_content"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:id="@+id/record_time"
             android:layout_above="@id/btnStart"
