--- a/rechordly_app/mobile/src/main/res/layout/fragment_item.xml
+++ b/rechordly_app/mobile/src/main/res/layout/fragment_item.xml
@@ -13,7 +13,10 @@
         android:textAppearance="?attr/textAppearanceListItem"
         android:layout_weight="0.9"
         android:width="300dp"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:maxLines="1"
+        android:maxLength="20"
+        android:ellipsize="end"/>
 
     <TextView
         android:id="@+id/content"
