--- a/rechordly_app/wear/src/main/res/layout/round_activity_name.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_name.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name\n Recording?"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
+        android:layout_marginLeft="10dp"
         android:id="@+id/name_txt"
         android:gravity="center"
         android:lineSpacingExtra="-8dp"
