--- a/rechordly_app/mobile/src/main/res/layout/activity_info.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_info.xml
@@ -134,16 +134,16 @@
         android:layout_height="50dp" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
         android:text="Lyrics"
         android:id="@+id/lyric"
         android:layout_above="@+id/edit"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
         android:text="Edit"
         android:id="@+id/edit"
         android:layout_below="@+id/space2"
