--- a/rechordly_app/mobile/src/main/res/layout/activity_lyric.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_lyric.xml
@@ -1,13 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:layout_width="match_parent" android:layout_height="match_parent">-->
+
+<!--<ImageView-->
+<!--android:layout_width="fill_parent"-->
+<!--android:layout_height="fill_parent"-->
+<!--android:id="@+id/info"-->
+<!--android:src="@drawable/recording"-->
+<!--android:clickable="true"/>-->
+
+<!--<ToggleButton-->
+<!--android:id="@+id/playback"-->
+<!--android:layout_width="100dp"-->
+<!--android:layout_height="100dp"-->
+<!--android:background="@drawable/check"-->
+<!--android:layout_marginLeft="225dp"-->
+<!--android:layout_marginTop="270dp"-->
+<!--android:textOn=""-->
+<!--android:textOff=""-->
+<!--android:focusable="false"-->
+<!--android:focusableInTouchMode="false" />-->
+<!--</RelativeLayout>-->
+
+<!--<android.support.design.widget.CoordinatorLayout -->
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:id="@+id/view">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <!--android:background="?attr/colorPrimary"-->
+            <!--app:layout_scrollFlags="scroll|enterAlways"-->
+            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:id="@+id/mytext"
+                android:textSize="30sp"/>
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
+        android:gravity="center"
         android:id="@+id/myLyrics" />
-
-</LinearLayout>
+</RelativeLayout>
