--- a/rechordly_app/mobile/src/main/res/layout/activity_lyric.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_lyric.xml
@@ -1,28 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--android:layout_width="match_parent" android:layout_height="match_parent">-->
-
-<!--<ImageView-->
-<!--android:layout_width="fill_parent"-->
-<!--android:layout_height="fill_parent"-->
-<!--android:id="@+id/info"-->
-<!--android:src="@drawable/recording"-->
-<!--android:clickable="true"/>-->
-
-<!--<ToggleButton-->
-<!--android:id="@+id/playback"-->
-<!--android:layout_width="100dp"-->
-<!--android:layout_height="100dp"-->
-<!--android:background="@drawable/check"-->
-<!--android:layout_marginLeft="225dp"-->
-<!--android:layout_marginTop="270dp"-->
-<!--android:textOn=""-->
-<!--android:textOff=""-->
-<!--android:focusable="false"-->
-<!--android:focusableInTouchMode="false" />-->
-<!--</RelativeLayout>-->
-
-<!--<android.support.design.widget.CoordinatorLayout -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -40,9 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:layout_scrollFlags="scroll|enterAlways"-->
-            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -57,10 +30,12 @@
     </android.support.design.widget.AppBarLayout>
 
     <TextView
+        android:layout_below="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="16dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:id="@+id/myLyrics" />
 </RelativeLayout>
