Added edit functionality for editing old recordings && made it so crop numbers no longer move

--- a/rechordly_app/wear/src/main/res/layout/fragment_done.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_done.xml
@@ -50,6 +50,7 @@
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/done_btn"
         android:layout_marginTop="5dp"
+        android:id="@+id/done_arrow"
         />
 
 
