--- a/rechordly_app/wear/src/main/res/layout/activity_gain_chooser.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_gain_chooser.xml
@@ -31,13 +31,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/gain_parent">
 
 
         <TextView
             android:id="@+id/gain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_marginTop="45dp"
             android:paddingBottom="0dp"
