fixed a few bugs

--- a/rechordly_app/mobile/src/main/res/layout/activity_info.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_info.xml
@@ -1,28 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent" android:layout_height="match_parent">-->
-
-    <!--<ImageView-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="fill_parent"-->
-        <!--android:id="@+id/info"-->
-        <!--android:src="@drawable/recording"-->
-        <!--android:clickable="true"/>-->
-
-    <!--<ToggleButton-->
-        <!--android:id="@+id/playback"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="100dp"-->
-        <!--android:background="@drawable/check"-->
-        <!--android:layout_marginLeft="225dp"-->
-        <!--android:layout_marginTop="270dp"-->
-        <!--android:textOn=""-->
-        <!--android:textOff=""-->
-        <!--android:focusable="false"-->
-        <!--android:focusableInTouchMode="false" />-->
-<!--</RelativeLayout>-->
-
-<!--<android.support.design.widget.CoordinatorLayout -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -40,9 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:layout_scrollFlags="scroll|enterAlways"-->
-            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,13 +25,6 @@
                 android:id="@+id/mytext"
                 android:textSize="30sp"/>
 
-            <!--<ImageView-->
-                <!--android:id="@+id/pencil_image"-->
-                <!--android:layout_width="60dp"-->
-                <!--android:layout_height="60dp"-->
-                <!--android:layout_gravity="right"-->
-                <!--android:layout_marginRight="5dp"-->
-                <!--android:src="@drawable/pencil"/>-->
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -86,7 +52,7 @@
         android:layout_below="@+id/wave"
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="90dp">
 
         <LinearLayout
@@ -114,18 +80,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
-        <ToggleButton
-            android:layout_gravity="end|center_vertical"
-            android:id="@+id/playback"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/check"
-            android:textOn=""
-            android:textOff=""
-            android:focusable="false"
-            android:focusableInTouchMode="false" />
     </LinearLayout>
+
+    <ToggleButton
+        android:layout_toRightOf="@+id/effects_play_button"
+        android:layout_below="@+id/wave"
+        android:layout_gravity="end|center_vertical"
+        android:id="@+id/playback"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/check"
+        android:gravity="center"
+        android:textOn=""
+        android:textOff=""
+        android:textSize="0sp"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
     <Space
         android:id="@+id/space2"
@@ -134,8 +104,6 @@
         android:layout_height="60dp" />
 
     <ImageButton
-        android:layout_width="200dp"
-        android:layout_height="50dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:layout_width="250dp"
